# statistics_REST-API

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/app/: config.py  dev_settings.py  middleware.py  settings.py  urls.py  views.py
app/app/utils/: errors.py  general.py
app/static/users/: style.css
app/statistics_api/: apps.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app/statistics_api/migrations/: 0001_initial.py
app/statistics_api/parser/: parse.py  request.py  save_headers.py
app/statistics_api/parser/redis_db/: client.py  config.py
app/statistics_api/utils/: permission.py
app/templates/: base.html  home.html
app/templates/app_statistics/: create_payment.html
app/templates/errors/: base.html
app/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
app/templates/users/: payment_failed.html  payment_success.html  profile.html  result_template.html  token.html
app/users/: admin.py  forms.py  models.py  service.py  tasks.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/utils/: constants.py  general.py  handlers.py  models.py  token.py
nginx/: Dockerfile  nginx.conf
